<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menuSearch"
        android:title="@string/text_menu_search"
        app:showAsAction="always"
        android:icon="@drawable/ic_search_white_24dp"
        />

    <item android:id="@+id/menuAdd"
        android:title="@string/text_menu_add"
        app:showAsAction="always"
        android:icon="@drawable/ic_person_add_24dp"
        />

    <item android:id="@+id/menuConfig"
        android:title="@string/text_menu_config"
        app:showAsAction="never"
        />

    <item android:id="@+id/menuLogaut"
        android:title="@string/text_menu_logaut"
        app:showAsAction="never"
        />
</menu>